@@ -1,3 +1,7 @@
+1999-01-20  Todd Pfaff  <pfaff@mcmaster.ca>
+
+	* client-src/sendbackup-gnutar.c: new Samba 2.0.0 message 
+
 1999-01-19  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
 	* server-src/amflush.c: use ap_snprintf instead of snprintf.
